tab image overflow corrected

--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ html {
 }
 section {
   padding: 2rem 9%;
+  overflow: hidden;
 }
 footer {
   padding: 2rem 9%;
